client/css/_hangout_list.scss
#hangouts {

  padding: 0;
  overflow-y: auto;

  .hangout-item {
    overflow: auto;
    p.completed { color: $kudo; text-align: center;}
    border-top: 1px solid $divider;
    padding: 20px 0;

    ul.dropdown-menu { top: 35px; left: -200px;}
    span.dropdown-toggle:hover { cursor: pointer;}

    .hangout-topic {
      @include font-face(400, 17px, normal, $cta-blue);
    }
    #leave-hangout { text-decoration: underline; text-align: center; display: block;
        @include font-face(400, 12px, normal, $cta-blue);}
    p.upcoming { text-transform: uppercase; color: $kudo; text-align: center; }
    .status {
      list-style: none;
      display: table;
      padding: 0;

      li {
        display: table-cell;
        vertical-align: top;
      }

      label {
        @include font-face(400, 12px, normal, $warm-grey);
        display: inline-block;
      }

      i.faa-burst {
        margin-top: 20px;
      }

    }

    label {

      &.name {
        @include font-face(400, 14px, normal, $primary-grey);
      }

      span {
        @include font-face(400, 12px, normal, $warm-grey);
      }

    }

  }

}

#hangout-options {

  .btn {

    text-align: left;

    &.active {
      box-shadow: none;
    }

  }

  span.title {
    @include font-face(400, 17px, normal, $primary-grey);
    padding-left: 10px;
  }

  label {
    input[type="radio"] {
      ~ i.fa {
        &.fa-circle-o {
          color: $primary-grey;
          display: inline;
          outline: none;
        }
        &.fa-dot-circle-o {
          display: none;
        }
      }
      &:checked ~ i.fa {
        &.fa-circle-o {
          display: none;
        }
        &.fa-dot-circle-o {
          color: $cta-blue;
          display: inline;
        }
      }
    }

    &.btn i.type {
      font-size: 20px;
      padding-left: 10px;
    }

    &:hover input[type="radio"] ~ i.fa {
      color: $cta-blue;
    }
  }

}

